--- a/composer.json
+++ b/composer.json
@@ -9,11 +9,18 @@
     "php": ">=8.2",
     "ext-ctype": "*",
     "ext-iconv": "*",
+    "phpdocumentor/reflection-docblock": "^5.6",
+    "phpstan/phpdoc-parser": "^2.0",
     "symfony/console": "7.2.*",
     "symfony/dotenv": "7.2.*",
     "symfony/flex": "^2.4.7",
     "symfony/framework-bundle": "7.2.*",
+    "symfony/property-access": "7.2.*",
+    "symfony/property-info": "7.2.*",
     "symfony/runtime": "7.2.*",
+    "symfony/serializer": "7.2.*",
+    "symfony/uid": "7.2.*",
+    "symfony/validator": "7.2.*",
     "symfony/yaml": "7.2.*"
   },
   "require-dev": {
