--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -26,6 +26,10 @@ doctrine:
                 alias: App
         controller_resolver:
             auto_mapping: false
+        filters:
+            soft_delete:
+                class: App\Doctrine\Filter\SoftDeleteFilter
+                enabled: true
 
 when@test:
     doctrine:
