--- a/config/services.yaml
+++ b/config/services.yaml
@@ -18,3 +18,7 @@ services:
     App\Resolver\RequestDtoResolver:
         tags:
             - { name: controller.argument_value_resolver, priority: 100 }
+
+    App\Doctrine\Filter\SoftDeleteFilter:
+        tags:
+            - { name: doctrine.orm.entity_manager_filter, alias: soft_delete }
